Fix audience links covering the logo.

--- a/resources/gato-template-txstate2015/css/homepage/_top-banner.scss
+++ b/resources/gato-template-txstate2015/css/homepage/_top-banner.scss
@@ -168,7 +168,6 @@ div#homepage-banner {
           position: absolute;
           bottom: 10px;
           right: 0;
-          left: 0;
           @media (max-width: $md-breakpoint) {
             position: static;
           }
